# Qwen2.5-VL

./: .gitignore  README.md  requirements_web_demo.txt
backup_2.5/: internvl_grounding_openrouter.ipynb  jina_embeddings_v4_alignment.ipynb  spatial_understanding_internvl.ipynb  test.ipynb  video_understanding_nuscenes.ipynb
backup_2.5/design_docs/: vlm_judge_refinement_system.md  vlm_judge_test_prompts.md
backup_2.5/embedding_search/alfa_curate/: BUILD.bazel  generate_prompt_variants.py  score_fusion.py  utils.py
cookbooks/: batch_inference.py  intern_vl_ground.py  nuscenes_downloader.py  video_understanding.ipynb
cookbooks/utils/: __init__.py  images_to_videos.py  inference.py  scene_complexity.py  spatial_inference.py  split_folder.py  temporal_inference.py  video_preprocessing.py
data_curate/: README.md  Retrieval_Evaluation_Framework.md  test.ipynb
data_curate/alfa_curate/: slice_scorer.py
data_curate/alfa_curate/test/: BUILD.bazel  slice_scorer_test.py
data_curate/alpha_curate/: config.py  data_types.py  slice_scorer.py  utils.py
data_curate/benchmarks/: inference_benchmark.py  (+1 more)
embedding_search/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUERY_SYSTEM_GUIDE.md  README.md  WORKFLOW_GUIDE.md  complete_workflow.sh  config.py  config.yaml  database.py  docker-compose.lakefs.yml  embedder.py  exceptions.py  launch.sh  launch_streamlit.sh  main.py  my_results.json  optimizations.py  query_cache.py  query_embeddings.json  query_embeddings.npy  requirements.txt  run_search.sh  run_with_fix.sh  search.py  streamlit_app.py  test_implementation.py  test_query_cache.py  test_search_zip_fragments.py  video_embeddings.parquet  visualizer.py
nvidia_cosmos/: README.md  README_v2.md  advanced_visualization.py  benchmark_optimizations.py  config.py  config.yaml  embedder.py  example_benchmark.py  example_usage.py  main.py  main_v2.py  migrate.py  mock_interface.html  mock_session_export_165641.json  optimizations.py  quick_demo.py  requirements.txt  streamlit_app.py  test_visualizer.py  video_database.py  video_embedder.py  video_search.py  video_search_optimized.py  video_search_v2.py  video_visualizer.py  visualizer_demo.py
(+159 files in other folders)
