load("//autonomy/perception/datasets/active_learning/framework:strategy.bzl", "active_learning_asset_ray")
load("//tools/rules:py_library.bzl", "py_library")

active_learning_asset_ray(
    name = "alfa_curate",
    branch_name = "alfa_curate",
    code_version = "0.0.1",
    dataset_name = "active_learning",
    input_assets = [
        "human_labels_gold_main",
        "features_cosmos",
    ],
    stage_name = "selection",
    tags = ["lat"],
)

filegroup(
    name = "resources",
    srcs = glob(["*.yaml"]),
    tags = ["lat"],
    visibility = [
        "//autonomy:__subpackages__",
        "//kits:__subpackages__",
    ],
)


py_library(
    name = "config",
    srcs = ["config.py"],
    tags = ["lat"],
    visibility = ["//:__subpackages__"],
    deps = ["@python//:pydantic"],
)

py_library(
    name = "slice_scorer",
    srcs = ["slice_scorer.py"],
    tags = ["lat"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":config",
        ":utils",
        "//autonomy/perception/datasets/active_learning/framework:slice_scorer_base",
        "@python//:numpy",
        "@python//:pyyaml",
    ],
)

py_library(
    name = "utils",
    srcs = ["utils.py"],
    tags = ["lat"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//autonomy/perception/datasets/features/cosmos:config",
        "//autonomy/perception/datasets/features/cosmos:infer",
        "//kits/scalex/dataset/instances:lance_dataset",
        "//platforms/lakefs:client",
        "@python//:lancedb",
        "@python//:numpy",
    ],
)
